layout bug fix

--- a/src/pages/career/career.module.less
+++ b/src/pages/career/career.module.less
@@ -8,7 +8,7 @@
 	list-style-type: none;
 }
 
-.timeline:before {
+.timeline::before {
 	position: absolute;
 	left: 50%;
 	top: 0;
@@ -68,7 +68,7 @@
 	padding: 1em 0;
 }
 
-.timeline li:after {
+.timeline li::after {
 	content: '';
 	display: block;
 	height: 0;
@@ -78,14 +78,14 @@
 
 .direction-l {
 	position: relative;
-	width: 300px;
+	width: 310px;
 	float: left;
 	text-align: right;
 }
 
 .direction-r {
 	position: relative;
-	width: 300px;
+	width: 310px;
 	float: right;
 }
 
@@ -118,11 +118,11 @@
 	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
 }
 
-.direction-l .flag:before,
-.direction-r .flag:before {
+.direction-l .flag::before,
+.direction-r .flag::before {
 	position: absolute;
 	top: 50%;
-	right: -40px;
+	right: -30px;
 	content: ' ';
 	display: block;
 	width: 20px;
@@ -134,11 +134,11 @@
 	z-index: 10;
 }
 
-.direction-r .flag:before {
-	left: -40px;
+.direction-r .flag::before {
+	left: -30px;
 }
 
-.direction-l .flag:after {
+.direction-l .flag::after {
 	content: '';
 	position: absolute;
 	left: 100%;
@@ -146,13 +146,12 @@
 	height: 0;
 	width: 0;
 	margin-top: -8px;
-	border: solid transparent;
+	border: 8px solid transparent;
 	border-left-color: rgb(248, 248, 248);
-	border-width: 8px;
 	pointer-events: none;
 }
 
-.direction-r .flag:after {
+.direction-r .flag::after {
 	content: '';
 	position: absolute;
 	right: 100%;
@@ -160,15 +159,13 @@
 	height: 0;
 	width: 0;
 	margin-top: -8px;
-	border: solid transparent;
+	border: 8px solid transparent;
 	border-right-color: rgb(248, 248, 248);
-	border-width: 8px;
 	pointer-events: none;
 }
 
 .time-wrapper {
 	display: inline;
-
 	line-height: 1em;
 	font-size: 0.66666em;
 	color: rgb(250, 80, 80);
@@ -240,24 +237,24 @@
 		z-index: 15;
 	}
 
-	.direction-l .flag:before,
-	.direction-r .flag:before {
+	.direction-l .flag::before,
+	.direction-r .flag::before {
 		position: absolute;
 		top: -30px;
 		left: 50%;
 		content: ' ';
 		display: block;
-		width: 12px;
-		height: 12px;
-		margin-left: -6px;
+		width: 20px;
+		height: 20px;
+		margin-left: -10px;
 		background: #fff;
 		border-radius: 10px;
 		border: 4px solid rgb(255, 80, 80);
 		z-index: 10;
 	}
 
-	.direction-l .flag:after,
-	.direction-r .flag:after {
+	.direction-l .flag::after,
+	.direction-r .flag::after {
 		content: '';
 		position: absolute;
 		left: 50%;
@@ -265,9 +262,8 @@
 		height: 0;
 		width: 0;
 		margin-left: -8px;
-		border: solid transparent;
+		border: 8px solid transparent;
 		border-bottom-color: rgb(255, 255, 255);
-		border-width: 8px;
 		pointer-events: none;
 	}
 
